--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
     },
     "dependencies": {
         "@babel/plugin-proposal-class-properties": "^7.8.3",
+        "@types/react-bootstrap": "^1.0.1",
         "@types/react-redux": "^7.1.8",
+        "react-bootstrap": "^1.0.1",
         "react-redux": "^7.2.0",
         "react-router-dom": "^5.2.0",
         "redux": "^4.0.5",
