--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,8 @@ Homestead.yaml
 npm-debug.log
 yarn-error.log
 .editorconfig
+
+/public/css/app.css
+/public/js/app.js
+/public/js/popper.js
+/public/js/app.js.map
