--- a/.gitignore
+++ b/.gitignore
@@ -16,5 +16,5 @@ yarn-error.log
 /public/js/app.js
 /public/js/popper.js
 /public/js/app.js.map
-/public/js/popper.map.js
+/public/js/popper.js.map
 /public/mix-manifest.json
