--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "@babel/plugin-proposal-class-properties": "^7.8.3",
         "@types/react-bootstrap": "^1.0.1",
         "@types/react-redux": "^7.1.8",
+        "moment": "^2.27.0",
         "react-bootstrap": "^1.0.1",
         "react-icons": "^3.10.0",
         "react-redux": "^7.2.0",
