add filter by tags

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "moment": "^2.27.0",
         "react-bootstrap": "^1.0.1",
         "react-icons": "^3.10.0",
+        "react-multi-select-component": "^3.0.1",
         "react-redux": "^7.2.0",
         "react-router-dom": "^5.2.0",
         "redux": "^4.0.5",
